--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -9,33 +9,55 @@
 body {
     padding-left: 10px;
     padding-right: 10px;
+    font-family: Arial, helvetica, sans-serif;
 }
 
 h1 {
     padding: 10px;
-    font-family: helvetica;
     color:midnightblue;
+    text-align:center;
+    font-size:175%;
 }
-
-p {
+.content{
     margin: 10px;
     border: 1px solid black;
-    background-color: #A52A2A;
+    background-color: lightseagreen;
     padding:10px;
-    padding-top:20px;
+    padding-top:25px;
     font-family: helvetica;
     color: white;
 }
 
-/* simple responsive framework */
-.row {
-    width: 100%;
+.label{
+    padding:1px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color:black;
+    border: 1px solid black;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 125%;
 }
+#l1{
+    background-color: lightblue;
+}
+#l2{
+    background-color: lightcyan;
+}
+#l3{
+    background-color:lightyellow;
+}
+
+/* *** simple responsive framework *** */
+/* ----------------------------------- */
 
 /* large devices */
 @media (min-width:992px){
-    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
-        float: left;
+    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
+    .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
+        float: left;        
+        position:relative;
     }
     .col-lg-1{
         width: 8.33%;
@@ -77,8 +99,10 @@ p {
 
 /* medium devices */
 @media (min-width: 768px) and (max-width: 991px) {
-    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
+    .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
         float: left;
+        position:relative;
       }
       .col-md-1 {
         width: 8.33%;
@@ -120,8 +144,10 @@ p {
 
 /* small devices */
 @media(max-width: 767px){
-    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6,
+    .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
         float: left;
+        position:relative;
     }
     .col-sm-1 {
         width: 8.88%;
